--- a/app/views/projects/_list_projects_default.html.erb
+++ b/app/views/projects/_list_projects_default.html.erb
@@ -29,9 +29,9 @@
       </div>
     </div>
    
-    <button class="ui bottom attached button" onclick="window.location.href='<%= scrumboard_path(project) %>'">
-      Acessar Board
-    </button>
+   <button class="ui bottom attached button" onclick="window.location.href='<%= select_project_path(project) %>'">
+    Acessar projeto
+   </button>
   </div>
 
 <% end %>
