--- a/app/views/user_stories/_form.html.erb
+++ b/app/views/user_stories/_form.html.erb
@@ -32,7 +32,7 @@
 
     <div class="field">
       <%= f.label :description %>
-      <%= f.text_area :description %>
+      <%= f.rich_text_area :description %>
     </div>
 
     <div class="inline field">
