--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -24,7 +24,7 @@
 
   <div class="inline field">
     <%= f.label :description %>
-    <%= f.text_area :description %>
+    <%= f.rich_text_area :description %>
   </div>
   
   <div class="inline field"><label>Duração</label></div>
